--- a/index.html
+++ b/index.html
@@ -402,7 +402,11 @@
 
 	<div class="backdrop is-hidden" data-modal>
 		<div class="modal">
-			<button class="modal-button" data-modal-close>close</button>
+			<button class="modal-button" data-modal-close>
+				<svg class="modal-icon">
+					<use href="./images/icons.svg#icon-cross"></use>
+				</svg>
+			</button>
 		</div>
 	</div>
 
