--- a/portfolio.html
+++ b/portfolio.html
@@ -78,6 +78,10 @@
 							<div class="shop-thumb">
 								<img width="370" height="294" src="./images/portfolio/img1.jpg" alt="Ноутбук"
 									class="item-photo">
+								<p class="shop-item-hover">
+									Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+									позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+								</p>
 							</div>
 							<div class="item-div">
 								<h3 class="item-title">Технокряк</h3>
@@ -87,7 +91,13 @@
 					</li>
 					<li class="shop-item">
 						<a href="#" class="item">
-							<img width="370" height="294" src="./images/portfolio/img2.jpg" alt="Постер" class="item-photo">
+							<div class="shop-thumb">
+								<img width="370" height="294" src="./images/portfolio/img2.jpg" alt="Постер" class="item-photo">
+								<p class="shop-item-hover">
+									Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+									позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+								</p>
+							</div>
 							<div class="item-div">
 								<h3 class="item-title">Постер New Orlean vs Golden Star</h3>
 								<p class="item-text">Дизайн</p>
@@ -96,7 +106,14 @@
 					</li>
 					<li class="shop-item">
 						<a href="#" class="item">
-							<img width="370" height="294" src="./images/portfolio/img3.jpg" alt="Ресторан" class="item-photo">
+							<div class="shop-thumb">
+								<img width="370" height="294" src="./images/portfolio/img3.jpg" alt="Ресторан"
+									class="item-photo">
+								<p class="shop-item-hover">
+									Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+									позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+								</p>
+							</div>
 							<div class="item-div">
 								<h3 class="item-title">Ресторан Seafood</h3>
 								<p class="item-text">Приложение</p>
@@ -105,7 +122,14 @@
 					</li>
 					<li class="shop-item">
 						<a href="#" class="item">
-							<img width="370" height="294" src="./images/portfolio/img4.jpg" alt="Наушники" class="item-photo">
+							<div class="shop-thumb">
+								<img width="370" height="294" src="./images/portfolio/img4.jpg" alt="Наушники"
+									class="item-photo">
+								<p class="shop-item-hover">
+									Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+									позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+								</p>
+							</div>
 							<div class="item-div">
 								<h3 class="item-title">Проект Prime</h3>
 								<p class="item-text">Маркетинг</p>
@@ -114,7 +138,14 @@
 					</li>
 					<li class="shop-item">
 						<a href="#" class="item">
-							<img width="370" height="294" src="./images/portfolio/img5.jpg" alt="Посылки" class="item-photo">
+							<div class="shop-thumb">
+								<img width="370" height="294" src="./images/portfolio/img5.jpg" alt="Посылки"
+									class="item-photo">
+								<p class="shop-item-hover">
+									Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+									позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+								</p>
+							</div>
 							<div class="item-div">
 								<h3 class="item-title">Проект Boxes</h3>
 								<p class="item-text">Приложение</p>
@@ -123,7 +154,14 @@
 					</li>
 					<li class="shop-item">
 						<a href="#" class="item">
-							<img width="370" height="294" src="./images/portfolio/img6.jpg" alt="Монитор" class="item-photo">
+							<div class="shop-thumb">
+								<img width="370" height="294" src="./images/portfolio/img6.jpg" alt="Монитор"
+									class="item-photo">
+								<p class="shop-item-hover">
+									Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+									позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+								</p>
+							</div>
 							<div class="item-div">
 								<h3 class="item-title">Inspiration has no Borders</h3>
 								<p class="item-text">Веб-сайт</p>
@@ -132,7 +170,13 @@
 					</li>
 					<li class="shop-item">
 						<a href="#" class="item">
-							<img width="370" height="294" src="./images/portfolio/img7.jpg" alt="Книга" class="item-photo">
+							<div class="shop-thumb">
+								<img width="370" height="294" src="./images/portfolio/img7.jpg" alt="Книга" class="item-photo">
+								<p class="shop-item-hover">
+									Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+									позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+								</p>
+							</div>
 							<div class="item-div">
 								<h3 class="item-title">Издание Limited Edition</h3>
 								<p class="item-text">Дизайн</p>
@@ -141,7 +185,13 @@
 					</li>
 					<li class="shop-item">
 						<a href="#" class="item">
-							<img width="370" height="294" src="./images/portfolio/img8.jpg" alt="Бирка" class="item-photo">
+							<div class="shop-thumb">
+								<img width="370" height="294" src="./images/portfolio/img8.jpg" alt="Бирка" class="item-photo">
+								<p class="shop-item-hover">
+									Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+									позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+								</p>
+							</div>
 							<div class="item-div">
 								<h3 class="item-title">Проект LAB</h3>
 								<p class="item-text">Маркетинг</p>
@@ -150,7 +200,13 @@
 					</li>
 					<li class="shop-item">
 						<a href="#" class="item">
-							<img width="370" height="294" src="./images/portfolio/img9.jpg" alt="Сайт" class="item-photo">
+							<div class="shop-thumb">
+								<img width="370" height="294" src="./images/portfolio/img9.jpg" alt="Сайт" class="item-photo">
+								<p class="shop-item-hover">
+									Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+									позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+								</p>
+							</div>
 							<div class="item-div">
 								<h3 class="item-title">Growing Business</h3>
 								<p class="item-text">Приложение</p>
