--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<a class="logo" href="./index.html"><span class="logo-span">Web</span>Studio</a>
 				<nav class="navigation">
 					<ul class="navigation-list">
-						<li class="list-li"><a class="list-item" href="./index.html">Студия</a></li>
+						<li class="list-li"><a class="list-item studio" href="./index.html">Студия</a></li>
 						<li class="list-li"><a class="list-item" href="./portfolio.html">Портфолио</a></li>
 						<li class="list-li"><a class="list-item" href="#">Контакты</a></li>
 					</ul>
