--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
 				<nav class="navigation">
 					<ul class="navigation-list">
 						<li class="list-li"><a class="list-item" href="./index.html">Студия</a></li>
-						<li class="list-li"><a class="list-item" href="./portfolio.html">Портфолио</a></li>
+						<li class="list-li"><a class="list-item portfolio" href="./portfolio.html">Портфолио</a></li>
 						<li class="list-li"><a class="list-item" href="#">Контакты</a></li>
 					</ul>
 				</nav>
